--- a/ascii-art/ascii-art.vcxproj.filters
+++ b/ascii-art/ascii-art.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="fontrender.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pixelbrightness.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image_write.h">
@@ -52,6 +55,9 @@
     </ClInclude>
     <ClInclude Include="stb_truetype.h">
       <Filter>Header Files\stb</Filter>
+    </ClInclude>
+    <ClInclude Include="pixelbrightness.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
